--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
       <form id="contact-form" class="contact-form">
         <div class="form-group">
           <label for="from_name">Your Name</label>
-          <input type="text" id="from_name" name="from_name" placeholder="John Doe" required />
+          <input type="text" id="from_name" name="from_name" placeholder="my name is" required />
         </div>
 
         <div class="form-group">
