Add contact section styles and fix layout

--- a/index.html
+++ b/index.html
@@ -1,66 +1,119 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>The Architect - Kelvin Chacha</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" defer></script>
-<link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-/>
-
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&family=Playfair+Display&display=swap" rel="stylesheet" />
-</head>
-<body>
-  <header class="header">
-  <div class="container">
-    <h1 class="header-title">THE SYSTEM ARCHITECT</h1>
-    <nav class="nav">
-      <a href="index.html" class="nav-link active">Home</a>
-      <a href="about.html" class="nav-link">About</a>
-      <a href="projects.html" class="nav-link">Projects</a>
-      <a href="contact.html" class="nav-link">Contact</a>
-    </nav>
+	<!DOCTYPE html>  
+<html lang="en">  
+<head>  
+  <meta charset="UTF-8" />  
+  <meta name="viewport" content="width=device-width, initial-scale=1" />  
+  <title>The Architect - Kelvin Chacha</title>  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" defer></script>  
+  <link  
+    rel="stylesheet"  
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"  
+  />  
+  <link rel="stylesheet" href="style.css" />  
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&family=Playfair+Display&display=swap" rel="stylesheet" />  
+</head>  
+<body>  
+  <header class="header">  
+    <div class="container">  
+      <h1 class="header-title">THE SYSTEM ARCHITECT</h1>  
+      <nav class="nav">  
+        <a href="index.html" class="nav-link active">Home</a>  
+        <a href="about.html" class="nav-link">About</a>  
+        <a href="projects.html" class="nav-link">Projects</a>  
+        <a href="contact.html" class="nav-link">Contact</a>  
+      </nav>  
+    </div>  
+  </header>  
+  
+<section class="hero">
+  <div class="hero-content">
+    <h2 class="hero-title">Kelvin Charles Chacha</h2>
+    <p class="hero-subtitle">System Architect | Hacker | Visionary</p>
+    <blockquote class="hero-quote">
+      “Designing Intelligent Systems.<br />
+      Securing Digital Empires.<br />
+      Telling African Tech Stories with Elegance.”
+    </blockquote>
   </div>
-</header>
+</section>
+</main>
 
-  <main class="main-content">
-    <section class="hero">
-      <h2 class="hero-title">Kelvin Charles Chacha</h2>
-      <p class="hero-subtitle">System Architect | Hacker | Visionary</p>
-      <blockquote class="hero-quote">
-        “Designing Intelligent Systems.<br />
-        Securing Digital Empires.<br />
-        Telling African Tech Stories with Elegance.”
-      </blockquote>
-    </section>
-  </main>
+<div class="section-divider"></div>
+<hr class="divider" />
 
-  <footer class="footer">
-  <div class="container footer-container">
-    <p class="footer-text">&copy; 2025 Kelvin Charles Chacha. All rights reserved.</p>
-    <div class="social-links">
-      <a href="https://github.com/kelvinchacha" target="_blank" rel="noopener" aria-label="GitHub" class="social-link">
-        <i class="fab fa-github"></i> GitHub
-      </a>
-      <a href="https://linkedin.com/in/KELVINCHACHA" target="_blank" rel="noopener" aria-label="LinkedIn" class="social-link">
-        <i class="fab fa-linkedin"></i> LinkedIn
-      </a>
-      <a href="mailto:kelvincharleschacha07@gmail.com" class="social-link" aria-label="Email">
-        <i class="fas fa-envelope"></i> Email
-      </a>
-      <a href="https://instagram.com/kelv.chacha" target="_blank" rel="noopener" aria-label="Instagram" class="social-link">
-        <i class="fab fa-instagram"></i> IG
-      </a>
-      <a href="https://facebook.com/KelvinChacha" target="_blank" rel="noopener" aria-label="Facebook" class="social-link">
-        <i class="fab fa-facebook"></i> Facebook
-      </a>
+<section class="partners-section container">
+  <h2 class="section-title">Strategic Partners</h2>
+  <p class="section-subtitle">Working together to build the future.</p>
+  
+  <div class="partners-grid">
+    <div class="partner-card">
+      <h3>University of Dodoma (UDOM)</h3>
+      <p>Primary academic and tech research partner for innovative projects in Tanzania.</p>
+      <a href="https://www.udom.ac.tz" target="_blank" rel="noopener">udom.ac.tz</a>
+    </div>
+
+    <div class="partner-card">
+      <h3>ChatGPT (OpenAI)</h3>
+      <p>Providing advanced AI assistance and intelligent system design support.</p>
+      <a href="https://chat.openai.com" target="_blank" rel="noopener">chat.openai.com</a>
+    </div>
+
+    <div class="partner-card">
+      <h3>TCRA</h3>
+      <p>Regulatory support and guidance for telecommunications and digital services.</p>
+      <a href="https://tcra.go.tz" target="_blank" rel="noopener">tcra.go.tz</a>
+    </div>
+
+    <div class="partner-card">
+      <h3>DTBi – Teknohama Incubator</h3>
+      <p>Incubating tech startups and fostering innovation in Tanzania.</p>
+      <a href="https://dtbi.or.tz" target="_blank" rel="noopener">dtbi.or.tz</a>
+    </div>
+
+    <div class="partner-card">
+      <h3>AI for Africa – Tanzania</h3>
+      <p>Promoting AI adoption and ethical AI development across Tanzania.</p>
+      <a href="#" target="_blank" rel="noopener">ai-africa.org</a>
+    </div>
+
+    <div class="partner-card">
+      <h3>Mozilla Foundation</h3>
+      <p>Supporting open-source projects and internet health initiatives.</p>
+      <a href="https://foundation.mozilla.org" target="_blank" rel="noopener">mozilla.org</a>
+    </div>
+
+    <div class="partner-card">
+      <h3>Tanzania Cyber Alliance (TISA)</h3>
+      <p>Strengthening cybersecurity awareness and collaborations in Tanzania.</p>
+      <a href="#" target="_blank" rel="noopener">cyberalliance.or.tz</a>
     </div>
   </div>
-</footer>
-</body>
-<script src="script.js"></script>
-
+</section>
+  </main>  
+  
+  <footer class="footer">  
+    <div class="container footer-container">  
+      <p class="footer-text">&copy; 2025 Kelvin Charles Chacha. All rights reserved.</p>  
+      <div class="social-links">  
+        <a href="https://github.com/kelvinchacha" target="_blank" rel="noopener" aria-label="GitHub" class="social-link">  
+          <i class="fab fa-github"></i> GitHub  
+        </a>  
+        <a href="https://linkedin.com/in/KELVINCHACHA" target="_blank" rel="noopener" aria-label="LinkedIn" class="social-link">  
+          <i class="fab fa-linkedin"></i> LinkedIn  
+        </a>  
+        <a href="mailto:kelvincharleschacha07@gmail.com" class="social-link" aria-label="Email">  
+          <i class="fas fa-envelope"></i> Email  
+        </a>  
+        <a href="https://instagram.com/kelv.chacha" target="_blank" rel="noopener" aria-label="Instagram" class="social-link">  
+          <i class="fab fa-instagram"></i> IG  
+        </a>  
+        <a href="https://facebook.com/KelvinChacha" target="_blank" rel="noopener" aria-label="Facebook" class="social-link">  
+          <i class="fab fa-facebook"></i> Facebook  
+        </a>  
+      </div>  
+    </div>  
+  </footer>  
+  
+  <script src="script.js"></script>  
+</body>  
 </html>
